[tool.poetry]
name = "proxy6"
version = "0.1.0"
description = ""
authors = ["michaeldel <michaeldel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
responses = "^0.10.6"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.black]
target-version = ['py37']

line-length = 88
skip-string-normalization = true

include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
